# fanbox-dl

./: .gitattributes  .gitignore  .npmignore  .prettierignore  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  eslint.config.mjs  lint-staged.config.js  package.json  pnpm-lock.yaml  tsconfig.check.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  tsup.config.ts  typedoc.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  docker.yml  docs-preview.yml  docs.yml  release.yml
.husky/: commit-msg
docs/superpowers/plans/: 2026-06-02-fanbox-readonly-sdk.md  2026-06-03-http2-transport.md  2026-06-03-rust-rewrite.md
docs/superpowers/specs/: 2026-06-02-fanbox-readonly-sdk-design.md  (+1 more)
src/: cli.rs  cli.ts  client-options.ts  client.rs  client.spec.ts  client.ts  downloader.rs  fanbox-headers.ts  http.rs  http.spec.ts  http.ts  index.ts  lib.rs  logger.rs  main.rs  manifest.rs  markdown.rs  path.rs  scheduler.rs  tsconfig.json  types.rs  types.ts
src/cli/: options.ts
src/client/: client.ts  fanbox-headers.ts  types.ts
src/client/models/: plan.ts  (+1 more)
src/downloader/: asset.rs  asset.spec.ts  asset.ts  cli.rs  cli.spec.ts  cli.ts  cookie.ts  discovery.rs  discovery.spec.ts  discovery.ts  errors.rs  errors.ts  index.ts  logger.rs  logger.ts  manifest.rs  manifest.spec.ts  manifest.ts  markdown.rs  markdown.spec.ts  markdown.ts  mod.rs  options.rs  options.spec.ts  options.ts  path.rs  path.spec.ts  path.ts  resolver.rs  resolver.spec.ts  resolver.ts  scheduler.rs  scheduler.spec.ts  scheduler.ts  sync.rs  sync.spec.ts  sync.ts  tsconfig.json
src/endpoints/: creator-get.ts  creator-list-following.ts  plan-list-creator.ts  plan-list-supporting.ts  post-info.ts  post-list-creator.ts  post-list-home.ts  post-list-supporting.ts  post-paginate-creator.ts
src/transport/: http2-session.ts  http2.ts  tls-fingerprint.ts  worker.ts
tests/: cli_download.rs  tsconfig.check.json  tsconfig.json
tests/downloader/: download.test.ts
tests/transport/: http2-session.test.ts  tls-fingerprint.test.ts  worker-transport.test.ts  worker.test.ts
(+52 files in other folders)
