[package]
name = "fanbox-dl"
version = "0.1.0"
edition = "2024"
description = "A Rust pixivFANBOX downloader and read-only SDK"
authors = ["moontai0724"]
license = "MIT"
repository = "https://github.com/moontaiworks/fanbox-dl"
homepage = "https://github.com/moontaiworks/fanbox-dl"
readme = "README.md"
keywords = ["fanbox", "pixiv", "downloader"]
categories = ["command-line-utilities", "api-bindings"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.53", features = ["std"] }
filetime = "0.2.26"
futures = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["charset", "http2", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
unicode-segmentation = "1.12.0"
url = "2.5.7"

[dev-dependencies]
tempfile = "3.23.0"
