[package]
name = "fanbox-dl"
version = "0.1.0"
edition = "2021"
description = "Rust FANBOX downloader and read-only API client"
license = "MIT"
repository = "https://github.com/moontaiworks/fanbox-dl"

[lib]
name = "fanbox_dl"
path = "src/lib.rs"

[[bin]]
name = "fanbox-dl"
path = "src/main.rs"

[dependencies]
bytes = "1.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive", "env"] }
futures-util = "0.3.31"
filetime = "0.2.26"
hex = "0.4.3"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
unicode-segmentation = "1.12.0"
url = "2.5.7"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"
wiremock = "0.6.5"
